Update foreign documents