@@ -1,10 +1,6 @@
 ## State of foreign function support
 
-**March 2021**
-
-* Rewrite section on NativeScope (now Segment allocators) and move it earlier in the doc
-* Discuss life-cycle options for downcalls (struct returned by value), upcalls and valist
-* Tweak examples
+**May 2021**
 
 **Maurizio Cimadamore**
 
@@ -21,17 +17,17 @@ A memory address is just what the name implies: it encapsulates a memory address
 First, if the memory address is known to belong to a segment the client *already* owns, a *rebase* operation can be performed; in other words, the client can ask the address what is its offset relative to a given segment, and then proceed to dereference the original segment accordingly:
 
 ```java
-MemorySegment segment = MemorySegment.allocateNative(100);
+MemorySegment segment = MemorySegment.allocateNative(100, ResourceScope.newImplicitScope());
 ...
 MemoryAddress addr = ... //obtain address from native code
 int x = MemoryAccess.getIntAtOffset(segment, addr.segmentOffset(segment));    
 ```
 
-Secondly, if the client does *not* have a segment which contains a given memory address, it can create one *unsafely*, using the `MemoryAddress::asSegmentRestricted`; this can also be useful to inject extra knowledge about spatial bounds which might be available in the native library the client is interacting with:
+Secondly, if the client does *not* have a segment which contains a given memory address, it can create one *unsafely*, using the `MemoryAddress::asSegment`; this can also be useful to inject extra knowledge about spatial bounds which might be available in the native library the client is interacting with:
 
 ```java
 MemoryAddress addr = ... //obtain address from native code
-MemorySegment segment = addr.asSegmentRestricted(100);
+MemorySegment segment = addr.asSegment(100);
 int x = MemoryAccess.getInt(segment);
 ```
 
@@ -39,10 +35,10 @@ Alternatively, the client can fall back to use the so called *everything* segmen
 
 ```java
 MemoryAddress addr = ... //obtain address from native code
-int x = MemoryAccess.getIntAtOffset(MemorySegment.ofNativeRestricted(), addr.toRawLongValue());
+int x = MemoryAccess.getIntAtOffset(MemorySegment.globalNativeSegment(), addr.toRawLongValue());
 ```
 
-Of course, since accessing the entire native heap is inherently *unsafe*, accessing the *everything* segment is considered a *restricted* operation which is only allowed after explicit opt in by setting the `foreign.restricted=permit` runtime flag.
+Of course, since accessing the entire native heap is inherently *unsafe*, accessing the *everything* segment is considered a *restricted* operation which is only allowed if the module performing the operation is listed in the  `--enable-native-access` command-line flag.
 
 `MemoryAddress`, like `MemorySegment` , implements the `Addressable` interface, which is a functional interface whose method projects an entity down to a `MemoryAddress` instance. In the case of `MemoryAddress` such a projection is the identity function; in the case of a memory segment, the projection returns the `MemoryAddres` instance for the segment's base address. This abstraction allows to pass either memory address or memory segments where an address is expected (this is especially useful when generating native bindings).
 
@@ -57,9 +53,11 @@ int arr[] = { 1, 2, 3, 4, 5 };
 Here the function `foo` takes an output parameter, a pointer to an `int` variable. This idiom can be implemented as follows, using the Foreign Memory Access API:
 
 ```java
-MemorySegment arr = MemorySegment.allocateNative(C_INT);
-for (int i = 1 ; i <= 5 ; i++) {
-    MemoryAccess.setInt(arr, i);
+try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+    MemorySegment arr = MemorySegment.allocateNative(C_INT, scope);
+    for (int i = 1 ; i <= 5 ; i++) {
+        MemoryAccess.setInt(arr, i);
+    }
 }
 ```
 
@@ -72,26 +70,18 @@ There are a number of issues with the above code snippet:
 To address these problems, Panama provides a `SegmentAllocator` abstraction, a functional interface which provides many useful operation to allocate commonly used values. For instance, the above code can be rewritten as follows:
 
 ```java
-MemorySegment arr = SegmentAllocator.ofDefault().allocateArray(C_INT, new int[] { 1, 2, 3, 4, 5 });
-```
-
-The above code retrieves the *default allocator* (an allocator built on top of `MemorySegment::allocateNative`), and then uses this allocator to create a native array which is initialized to the values `{ 1, 2, 3, 4, 5}`.  The array initialization is more efficient, compared to the previous snippet, as the Java array is copied *in bulk* into the memory region associated with the newly allocated memory segment.
-
-Memory associated with segments returned by the default allocator is released as soon as said segments become *unreachable*. To have better control over the lifetime of the segments returned by an allocator, clients can use the so called *scoped* allocator, which returns segments associated with a given scope:
-
-```java
-try (ResourceScope scope = ResourceScope.ofConfined()) {
-    MemorySegment arr = SegmentAllocator.scoped(scope).allocateArray(C_INT, new int[] { 1, 2, 3, 4, 5 });
+try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+    MemorySegment arr = SegmentAllocator.ofScope(scope).allocateArray(C_INT, new int[] { 1, 2, 3, 4, 5 });
 } // 'arr' is released here
 ```
 
-Scoped allocator make sure that all segments allocated with a scoped allocator are no longer usable after the scope associated with the allocator has been closed. This makes it easier to manage multiple resources which share the same lifecycle.
+The above code obtains a  *scoped allocator* (an allocator built on top of `MemorySegment::allocateNative`), and then uses this allocator to create a native array which is initialized to the values `{ 1, 2, 3, 4, 5}`.  The array initialization is more efficient, compared to the previous snippet, as the Java array is copied *in bulk* into the memory region associated with the newly allocated memory segment. The scoped allocator makes sure that all segments allocated with it are no longer usable after the scope associated with the allocator has been closed. This makes it easier to manage multiple resources which share the same lifecycle.
 
 Custom segment allocators are also critical to achieve optimal allocation performance; for this reason, a number of predefined allocators are available via factories in the `SegmentAllocator` interface. For instance, it is possible to create an arena-based allocator, as follows:
 
 ```java
-try (ResourceScope scope = ResourceScope.ofConfined()) {
-    SegmentAllocator allocator = SegmentAllocator.arenaUnbounded(scope);
+try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+    SegmentAllocator allocator = SegmentAllocator.arenaAllocator(scope);
     for (int i = 0 ; i < 100 ; i++) {
         allocator.allocateArray(C_INT, new int[] { 1, 2, 3, 4, 5 });
     }
@@ -105,22 +95,19 @@ For these reasons, all the methods in the Foreign Linker API which *produce* mem
 
 ### Symbol lookups
 
-The first ingredient of any foreign function support is a mechanism to lookup symbols in native libraries. In traditional Java/JNI, this is done via the `System::loadLibrary` and `System::load` methods, which internally map into calls to `dlopen`. In Panama, library lookups are modeled more directly, using a  class called`LibraryLookup`  (similar to a method handle lookup),  which provides capabilities to lookup named symbols in a given native library; we can obtain a library lookup in 3 different ways:
+The first ingredient of any foreign function support is a mechanism to lookup symbols in native libraries. In traditional Java/JNI, this is done via the `System::loadLibrary` and `System::load` methods, which internally map into calls to `dlopen`. Unfortunately, these methods do not provide a way for clients to obtain the address associated with a given library symbol. For this reason, the Foreign Linker API introduces a new abstraction, namely `SymbolLookup` (similar in spirit to a method handle lookup),  which provides capabilities to lookup named symbols; we can obtain a symbol lookup in 2 different ways <a href="#1"><sup>1</sup></a>:
 
-* `LibraryLookup::ofDefault`  — returns the library lookup which can *see* all the symbols that have been loaded with the VM
-* `LibraryLookup::ofPath` — creates a library lookup associated with the library found at the given absolute path
-* `LibraryLookup::ofLibrary` — creates a library lookup associated with the library with given name (this might require setting the `java.library.path` variable accordingly)
+* `SymbolLookup::loaderLookup` — creates a symbol lookup which can be used to search symbols in all the libraries loaded by the caller's classloader (e.g. using `System::loadLibrary` or `System::load`)
+* `CLinker::getSystemLookup`  — returns a platform-specific symbol lookup which can be used e.g. to search symbols in the standard C library
 
-Once a lookup has been obtained, a client can use it to retrieve handles to library symbols (either global variables or functions) using the `lookup(String)` method, which returns an  `Optional<LibraryLookup.Symbol>`. A lookup symbol is just a proxy for a memory address (in fact, it implements `Addressable`) and a name.
+Once a lookup has been obtained, a client can use it to retrieve handles to library symbols (either global variables or functions) using the `lookup(String)` method, which returns an  `Optional<MemoryAddress>`.
 
 For instance, the following code can be used to lookup the `clang_getClangVersion` function provided by the `clang` library:
 
 ```java
-LibraryLookup libclang = LibraryLookup.ofLibrary("clang");
-LibraryLookup.Symbol clangVersion = libclang.lookup("clang_getClangVersion").get();
+System.loadLibrary("clang");
+MemoryAddress clangVersion = SymbolLookup.loaderLookup().lookup("clang_getClangVersion").get();
 ```
-
-One crucial distinction between the library loading support of the  Foreign Linker API and of JNI is that JNI libraries are loaded into a  class loader. Furthermore, to preserve [classloader integrity](https://docs.oracle.com/javase/7/docs/technotes/guides/jni/jni-12.html#libmanage) integrity, the same JNI library cannot be loaded into more than one  classloader.  The foreign function support described here is more  primitive — the Foreign Linker API allows clients to target native  libraries directly, without any intervening JNI code. Crucially, Java  objects are never passed to and from native code by the Foreign Linker API. Because of this, libraries loaded through the `LibraryLookup` hook are not tied to any class loader and can be (re)loaded as many times as needed.
 
 ### C Linker
 
@@ -184,23 +171,23 @@ Here's an example of how we might want to do that (a full listing of all the exa
 
 ```java
 MethodHandle strlen = CLinker.getInstance().downcallHandle(
-		LibraryLookup.ofDefault().lookup("strlen").get(),
+		CLinker.systemLookup().lookup("strlen").get(),
         MethodType.methodType(long.class, MemoryAddress.class),
         FunctionDescriptor.of(C_LONG, C_POINTER)
 );
 ```
 
-Note that, since the function `strlen` is part of the standard C library, which is loaded with the VM, we can just use the default lookup to look it up. The rest is pretty straightforward — the only tricky detail is how to model `size_t`: typically this type has the size of a pointer, so we can use `C_LONG` on Linux, but we'd have to use `C_LONGLONG` on Windows. On the Java side, we model the `size_t` using a `long` and the pointer is modeled using a `MemoryAddress` parameter.
+Note that, since the function `strlen` is part of the standard C library, which is loaded with the VM, we can just use the system lookup to look it up. The rest is pretty straightforward — the only tricky detail is how to model `size_t`: typically this type has the size of a pointer, so we can use `C_LONG` on Linux, but we'd have to use `C_LONGLONG` on Windows. On the Java side, we model the `size_t` using a `long` and the pointer is modeled using a `MemoryAddress` parameter.
 
 One we have obtained the downcall native method handle, we can just use it as any other method handle:
 
 ```java
-try (ResourceScope scope = ResourceScope.ofConfined()) {
+try (ResourceScope scope = ResourceScope.newConfinedScope()) {
     long len = strlen.invokeExact(CLinker.toCString("Hello", scope).address()); // 5
 }
 ```
 
-Here we are using one of the helper methods in `CLinker` to convert a Java string into an off-heap memory segment which contains a `NULL` terminated C string. We then pass that segment to the method handle and retrieve our result in a Java `long`. Note how all this has been possible *without* any piece of intervening native code — all the interop code can be expressed in (low level) Java. Note also how we used an explicit resource scope to control the lifecycle of the allocated C string; while using the implicit *default scope* is an option, extra care must be taken when using segments featuring implicitly deallocation which are then converted into `MemoryAddress` instances: since the address is eventually converted (by the linker support) into a raw Java long, there is no guarantee that the memory segment would be kept *reachable* for the entire duration of the native call.
+Here we are using one of the helper methods in `CLinker` to convert a Java string into an off-heap memory segment which contains a `NULL` terminated C string. We then pass that segment to the method handle and retrieve our result in a Java `long`. Note how all this has been possible *without* any piece of intervening native code — all the interop code can be expressed in (low level) Java. Note also how we used an explicit resource scope to control the lifecycle of the allocated C string, which ensures timely deallocation of the memory segment holding the native string.
 
 The `CLinker` interfaces also supports linking of native function without an address known at link time; when that happens, an address must be provided when the method handle returned by the linker is invoked - this is very useful to support *virtual calls*. For instance, the above code can be rewritten as follows:
 
@@ -210,21 +197,19 @@ MethodHandle strlen_virtual = CLinker.getInstance().downcallHandle( // address p
         FunctionDescriptor.of(C_LONG, C_POINTER)
 );
 
-try (ResourceScope scope = ResourceScope.ofConfined()) {
+try (ResourceScope scope = ResourceScope.newConfinedScope()) {
     long len = strlen_virtual.invokeExact(
-        LibraryLookup.ofDefault().lookup("strlen").get() // address provided here!
+        (Addressable)CLinker.systemLookup().lookup("strlen").get() // address provided here!
         CLinker.toCString("Hello", scope).address()
     ); // 5
 }
 ```
 
-Now that we have seen the basics of how foreign function calls are supported in Panama, let's add some additional considerations. First, it is important to note that, albeit the interop code is written in Java, the above code can *not* be considered 100% safe. There are many arbitrary decisions to be made when setting up downcall method handles such as the one above, some of which might be obvious to us (e.g. how many parameters does the function take), but which cannot ultimately be verified by the Panama runtime. After all, a symbol in a dynamic library is, mostly a numeric offset and, unless we are using a shared library with debugging information, no type information is attached to a given library symbol. This means that, in this case, the Panama runtime has to *trust* our description of the `strlen` function. For this reason, access to the foreign linker is a restricted operation, which can only be performed if the runtime flag `foreign.restricted=permit` is passed on the command line of the Java launcher <a href="#1"><sup>1</sup></a>.
-
-Finally let's talk about the life-cycle of some of the entities involved here; first, as a downcall native handle wraps a lookup symbol, the library from which the symbol has been loaded will stay loaded until there are reachable downcall handles referring to one of its symbols; in the above example, this consideration is less important, given the use of the default lookup object, which can be assumed to stay alive for the entire duration of the application.
+Now that we have seen the basics of how foreign function calls are supported in Panama, let's add some additional considerations. First, it is important to note that, albeit the interop code is written in Java, the above code can *not* be considered 100% safe. There are many arbitrary decisions to be made when setting up downcall method handles such as the one above, some of which might be obvious to us (e.g. how many parameters does the function take), but which cannot ultimately be verified by the Panama runtime. After all, a symbol in a dynamic library is, mostly a numeric offset and, unless we are using a shared library with debugging information, no type information is attached to a given library symbol. This means that, in this case, the Panama runtime has to *trust* our description of the `strlen` function. For this reason, access to the foreign linker is a restricted operation, which can only be performed if the requesting module is listed in the `--enable-native-access` command-line flag <a href="#2"><sup>2</sup></a>.
 
 Certain functions might return pointers, or structs; it is important to realize that if a function returns a pointer (or a `MemoryAddress`), no life-cycle whatsoever is attached to that pointer. It is then up to the client to e.g. free the memory associated with that pointer, or do nothing (in case the library is responsible for the life-cycle of that pointer). If a library returns a struct by value, things are different, as a *fresh*, memory segment is allocated off-heap and returned to the callee. In such cases, the foreign linker API will request an additional prefix `SegmentAllocator` (see above) parameter which will be responsible for allocating the returned segment. The allocation will likely associate the segment with a *resource scope* that is known to the callee and which can then be used to release the memory associated with that segment. An additional overload of `downcallHandle` is also provided by `CLinker` where a client can specify which allocator should be used in such cases at *link-time*.
 
-Performance-wise, the reader might ask how efficient calling a foreign function using a native method handle is; the answer is *very*. The JVM comes with some special support for native method handles, so that, if a give method handle is invoked many times (e.g, inside an *hot* loop), the JIT compiler might decide to just generate a snippet of assembly code required to call the native function, and execute that directly. In most cases, invoking native function this way is as efficient as doing so through JNI <a href="#3a"><sup>3a</sup></a><a href="#3b"><sup>3b</sup></a>.
+Performance-wise, the reader might ask how efficient calling a foreign function using a native method handle is; the answer is *very*. The JVM comes with some special support for native method handles, so that, if a give method handle is invoked many times (e.g, inside an *hot* loop), the JIT compiler might decide to just generate a snippet of assembly code required to call the native function, and execute that directly. In most cases, invoking native function this way is as efficient as doing so through JNI <a href="#3"><sup>3</sup></a>.
 
 ### Upcalls
 
@@ -239,7 +224,7 @@ This is a function that can be used to sort the contents of an array, using a cu
 
 ```java
 MethodHandle qsort = CLinker.getInstance().downcallHandle(
-		LibraryLookup.ofDefault().lookup("qsort").get(),
+		CLinker.systemLookup().lookup("qsort").get(),
         MethodType.methodType(void.class, MemoryAddress.class, long.class, long.class, MemoryAddress.class),
         FunctionDescriptor.ofVoid(C_POINTER, C_LONG, C_LONG, C_POINTER)
 );
@@ -252,8 +237,8 @@ This time, in order to invoke the `qsort` downcall handle, we need a *function p
 ```java
 class Qsort {
 	static int qsortCompare(MemoryAddress addr1, MemoryAddress addr2) {
-		return MemoryAccess.getIntAtOffset(MemorySegment.ofNativeRestricted(), addr1.toRawLongValue()) - 
-	    	   MemoryAccess.getIntAtOffset(MemorySegment.ofNativeRestricted(), addr2.toRawLongValue());
+		return MemoryAccess.getIntAtOffset(MemorySegment.globalNativeSegment(), addr1.toRawLongValue()) - 
+	    	   MemoryAccess.getIntAtOffset(MemorySegment.globalNativeSegment(), addr2.toRawLongValue());
 	}
 }
 ```
@@ -268,33 +253,22 @@ MethodHandle comparHandle = MethodHandles.lookup()
                                                      MethodType.methodType(int.class, MemoryAddress.class, MemoryAddress.class));
 ```
 
-Now that we have a method handle for our Java comparator function, we can create a function pointer, using the foreign linker upcall support  — as for downcalls,  we have to describe the signature of the foreign function pointer using the layouts in the `CLinker` class:
+Now that we have a method handle for our Java comparator function, we finally have all the ingredients to create an upcall segment, and pass it to the `qsort` downcall handle:
 
 ```java
-MemorySegment comparFunc = CLinker.getInstance().upcallStub(
-    comparHandle,
-    FunctionDescriptor.of(C_INT, C_POINTER, C_POINTER)
-);
-```
-
-When no resource scope is specified (as in the above case), the upcall stub segment will be associated with the *default scope* - a non-closeable scope which does not support deterministic deallocation. This means that the upcall stub will be uninstalled when the upcall segment becomes *unreachable*. In cases where this is not desirable, the API also support associating a custom `ResourceScope` instance to the returned upcall segment.
-
-So, we finally have all the ingredients to create an upcall segment, and pass it to the `qsort` downcall handle:
-
-```java
-try (ResourceScope scope = ResourceScope.ofConfined()) {
+try (ResourceScope scope = ResourceScope.newConfinedScope()) {
     MemorySegment comparFunc = CLinker.getInstance().upcallStub(
         comparHandle,
     	FunctionDescriptor.of(C_INT, C_POINTER, C_POINTER),
         scope
 	);
-    MemorySegment array = SegmentAllocator.scoped(scope).allocateArray(new int[] { 0, 9, 3, 4, 6, 5, 1, 8, 2, 7 }));
-    qsort.invokeExact(array.address(), 10L, 4L, comparFunc.address());
+    MemorySegment array = SegmentAllocator.ofScope(scope).allocateArray(new int[] { 0, 9, 3, 4, 6, 5, 1, 8, 2, 7 }));
+    qsort.invokeExact(array.address(), 10L, 4L, comparFunc);
     int[] sorted = array.toIntArray(); // [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
 }
 ```
 
-The above code creates  a memory segment — `comparFunc` — containing a stub that can be used to invoke our Java comparator function. The memory segment is associated with the provided resource scope instance; this means that the stub will be uninstalled when the resource scope is closed. It is also possible (not shown here) to create upcall stubs associated with the *default scope*, in which case the stub will be uninstalled when the upcall segment becomes *unreachable*.
+The above code creates  a memory segment — `comparFunc` — containing a stub that can be used to invoke our Java comparator function. The memory segment is associated with the provided resource scope instance; this means that the stub will be uninstalled when the resource scope is closed. It is also possible (not shown here) to create upcall stubs associated with an *implicit scope*, in which case the stub will be uninstalled when the upcall segment becomes *unreachable*.
 
 The snippet then creates an off-heap array from a Java array (using a `SegmentAllocator`), which is then passed to the `qsort` handle, along with the comparator function we obtained from the foreign linker.  As a side-effect, after the call, the contents of the off-heap array will be sorted (as instructed by our comparator function, written in Java). We can than extract a new Java array from the segment, which contains the sorted elements. This is a more advanced example, but one that shows how powerful the native interop support provided by the foreign linker abstraction is, allowing full bidirectional interop support between Java and native.
 
@@ -314,11 +288,11 @@ The foreign function support can support variadic calls, but with a caveat: the 
 printf("%d plus %d equals %d", 2, 2, 4);
 ```
 
-To do this using the foreign function support provided by Panama we would have to build a *specialized* downcall handle for that call shape <a href="#6"><sup>6</sup></a>:
+To do this using the foreign function support provided by Panama we would have to build a *specialized* downcall handle for that call shape <a href="#4"><sup>4</sup></a>:
 
 ```java
 MethodHandle printf = CLinker.getInstance().downcallHandle(
-		LibraryLookup.ofDefault().lookup("printf").get(),
+		CLinker.systemLookup().lookup("printf").get(),
         MethodType.methodType(int.class, MemoryAddress.class, int.class, int.class, int.class),
         FunctionDescriptor.of(C_INT, C_POINTER, C_INT, C_INT, C_INT)
 );
@@ -347,7 +321,7 @@ It is indeed fairly easy to create a downcall for `vprintf`:
 
 ```java
 MethodHandle vprintf = CLinker.getInstance().downcallHandle(
-		LibraryLookup.ofDefault().lookup("vprintf").get(),
+		CLinker.systemLookup().lookup("vprintf").get(),
 		MethodType.methodType(int.class, MemoryAddress.class, VaList.class),
         FunctionDescriptor.of(C_INT, C_POINTER, C_VA_LIST));
 ```
@@ -357,7 +331,7 @@ Here, the notable thing is that `CLinker` comes equipped with the special `C_VA_
 To call the `vprintf` handle we need to create an instance of `VaList` which contains the arguments we want to pass to the `vprintf` function — we can do so, as follows:
 
 ```java
-try (ResourceScope scope = ResourceScope.ofConfined()) {
+try (ResourceScope scope = ResourceScope.newConfinedScope()) {
     vprintf.invoke(
             CLinker.toCString("%d plus %d equals %d", scope).address(),
             VaList.make(builder ->
@@ -367,7 +341,7 @@ try (ResourceScope scope = ResourceScope.ofConfined()) {
 ); //prints "2 plus 2 equals 4"
 ```
 
-While the callee has to do more work to call the `vprintf` handle, note that that now we're back in a place where the downcall handle  `vprintf` can be shared across multiple callees. Note that both the format string and the `VaList` are associated with the given resource scope — this means that both will remain valid throughout the native function call. As for other APIs, it is also possible (not shown here) to create a `VaList` associated with the *default scope* - meaning that the resources allocated by the `VaList` will remain available as long as the `VaList` remains *reachable*.
+While the callee has to do more work to call the `vprintf` handle, note that that now we're back in a place where the downcall handle  `vprintf` can be shared across multiple callees. Note that both the format string and the `VaList` are associated with the given resource scope — this means that both will remain valid throughout the native function call. As for other APIs, it is also possible (not shown here) to create a `VaList` associated with an *implicit scope* - meaning that the resources allocated by the `VaList` will remain available as long as the `VaList` remains *reachable*.
 
 Another advantage of using `VaList` is that this approach also scales to upcall stubs — it is therefore possible for clients to create upcalls stubs which take a `VaList` and then, from the Java upcall, read the arguments packed inside the `VaList` one by one using the methods provided by the `VaList` API (e.g. `VaList::vargAsInt(MemoryLayout)`), which mimic the behavior of the C `va_arg` macro.
 
@@ -379,11 +353,12 @@ The full source code containing most of the code shown throughout this document 
 import jdk.incubator.foreign.Addressable;
 import jdk.incubator.foreign.CLinker;
 import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.LibraryLookup;
+import jdk.incubator.foreign.SymbolLookup;
 import jdk.incubator.foreign.MemoryAccess;
 import jdk.incubator.foreign.MemoryAddress;
 import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.NativeScope;
+import jdk.incubator.foreign.ResourceScope;
+import jdk.incubator.foreign.SegmentAllocator;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
@@ -396,6 +371,7 @@ public class Examples {
 
     public static void main(String[] args) throws Throwable {
         strlen();
+        strlen_virtual();
         qsort();
         printf();
         vprintf();
@@ -403,12 +379,12 @@ public class Examples {
 
     public static void strlen() throws Throwable {
         MethodHandle strlen = CLinker.getInstance().downcallHandle(
-                LibraryLookup.ofDefault().lookup("strlen").get(),
+                CLinker.systemLookup().lookup("strlen").get(),
                 MethodType.methodType(long.class, MemoryAddress.class),
                 FunctionDescriptor.of(C_LONG, C_POINTER)
         );
 
-        try (ResourceScope scope = ResourceScope.ofConfined()) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
             MemorySegment hello = CLinker.toCString("Hello", scope);
             long len = (long) strlen.invokeExact(hello.address()); // 5
             System.out.println(len);
@@ -421,10 +397,10 @@ public class Examples {
                 FunctionDescriptor.of(C_LONG, C_POINTER)
         );
 
-        try (ResourceScope scope = ResourceScope.ofConfined()) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
             MemorySegment hello = CLinker.toCString("Hello", scope);
             long len = (long) strlen_virtual.invokeExact(
-                LibraryLookup.ofDefault().lookup("strlen").get(),                
+                (Addressable)CLinker.systemLookup().lookup("strlen").get(),
                 hello.address()); // 5
             System.out.println(len);
         }
@@ -432,15 +408,15 @@ public class Examples {
 
     static class Qsort {
         static int qsortCompare(MemoryAddress addr1, MemoryAddress addr2) {
-            int v1 = MemoryAccess.getIntAtOffset(MemorySegment.ofNativeRestricted(), addr1.toRawLongValue());
-            int v2 = MemoryAccess.getIntAtOffset(MemorySegment.ofNativeRestricted(), addr2.toRawLongValue());
+            int v1 = MemoryAccess.getIntAtOffset(MemorySegment.globalNativeSegment(), addr1.toRawLongValue());
+            int v2 = MemoryAccess.getIntAtOffset(MemorySegment.globalNativeSegment(), addr2.toRawLongValue());
             return v1 - v2;
         }
     }
 
     public static void qsort() throws Throwable {
         MethodHandle qsort = CLinker.getInstance().downcallHandle(
-                LibraryLookup.ofDefault().lookup("qsort").get(),
+                CLinker.systemLookup().lookup("qsort").get(),
                 MethodType.methodType(void.class, MemoryAddress.class, long.class, long.class, MemoryAddress.class),
                 FunctionDescriptor.ofVoid(C_POINTER, C_LONG, C_LONG, C_POINTER)
         );
@@ -449,14 +425,14 @@ public class Examples {
                 .findStatic(Qsort.class, "qsortCompare",
                         MethodType.methodType(int.class, MemoryAddress.class, MemoryAddress.class));
 
-        try (ResourceScope scope = ResourceScope.ofConfined()) {
-			MemorySegment comparFunc = CLinker.getInstance().upcallStub(
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemoryAddress comparFunc = CLinker.getInstance().upcallStub(
                 comparHandle,
                 FunctionDescriptor.of(C_INT, C_POINTER, C_POINTER), scope);
-            
-            MemorySegment array = SegmentAllocator.scoped(scope)
+
+            MemorySegment array = SegmentAllocator.ofScope(scope)
                                                   .allocateArray(C_INT, new int[] { 0, 9, 3, 4, 6, 5, 1, 8, 2, 7 });
-            qsort.invokeExact(array.address(), 10L, 4L, comparFunc.address());
+            qsort.invokeExact(array.address(), 10L, 4L, comparFunc);
             int[] sorted = array.toIntArray(); // [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
             System.out.println(Arrays.toString(sorted));
         }
@@ -464,11 +440,11 @@ public class Examples {
 
     public static void printf() throws Throwable {
         MethodHandle printf = CLinker.getInstance().downcallHandle(
-                LibraryLookup.ofDefault().lookup("printf").get(),
+                CLinker.systemLookup().lookup("printf").get(),
                 MethodType.methodType(int.class, MemoryAddress.class, int.class, int.class, int.class),
                 FunctionDescriptor.of(C_INT, C_POINTER, C_INT, C_INT, C_INT)
         );
-        try (ResourceScope scope = ResourceScope.ofConfined()) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
             MemorySegment s = CLinker.toCString("%d plus %d equals %d\n", scope);
             printf.invoke(s.address(), 2, 2, 4);
         }
@@ -477,11 +453,11 @@ public class Examples {
     public static void vprintf() throws Throwable {
 
         MethodHandle vprintf = CLinker.getInstance().downcallHandle(
-                LibraryLookup.ofDefault().lookup("vprintf").get(),
+                CLinker.systemLookup().lookup("vprintf").get(),
                 MethodType.methodType(int.class, MemoryAddress.class, CLinker.VaList.class),
                 FunctionDescriptor.of(C_INT, C_POINTER, C_VA_LIST));
 
-        try (ResourceScope scope = ResourceScope.ofConfined()) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
             MemorySegment s = CLinker.toCString("%d plus %d equals %d\n", scope);
             CLinker.VaList vlist = CLinker.VaList.make(builder ->
                      builder.vargFromInt(C_INT, 2)
@@ -495,8 +471,8 @@ public class Examples {
 
 
 
-* <a id="1"/>(<sup>1</sup>):<small> In reality this is not entirely new; even in JNI, when you call a `native` method the VM trusts that the corresponding implementing function in C will feature compatible parameter types and return values; if not a crash might occur.</small>
-* <a id="2"/>(<sup>2</sup>):<small> As an advanced option, Panama allows the user to opt-in to remove Java to native thread transitions; while, in the general case it is unsafe doing so (removing thread transitions could have a negative impact on GC for long running native functions, and could crash the VM if the downcall needs to pop back out in Java, e.g. via an upcall), greater efficiency can be achieved; performance sensitive users should consider this option at least for the functions that are called more frequently, assuming that these functions are *leaf* functions (e.g. do not go back to Java via an upcall) and are relatively short-lived.</small>
-* <a id="3"/>(<sup>3</sup>):<small> On Windows, layouts for variadic arguments have to be adjusted using the `CLinker.Win64.asVarArg(ValueLayout)`; this is necessary because the Windows ABI passes variadic arguments using different rules than the ones used for ordinary arguments.</small>
-
+* <a id="1"/>(<sup>1</sup>):<small> In the future, we might add more ways to obtain a symbol lookup - for instance:   ```  SymbolLookup.ofLibrary(String libName, ResourceScope scope)   ``` . This would  allow developers to load a  library and associate its lifecycle with a `ResourceScope` (rather than  a classloader). That is, when the scope is closed, the library will be  unloaded. However, adding these new mode will require some additional  foundational work on the `CLinker` support - as we need to make sure  that the memory address used by a downcall method handle cannot be  unloaded while the downcall method handle is being invoked.</small>
+* <a id="2"/>(<sup>2</sup>):<small> In reality this is not entirely new; even in JNI, when you call a `native` method the VM trusts that the corresponding implementing function in C will feature compatible parameter types and return values; if not a crash might occur.</small>
+* <a id="3"/>(<sup>3</sup>):<small> As an advanced option, Panama allows the user to opt-in to remove Java to native thread transitions; while, in the general case it is unsafe doing so (removing thread transitions could have a negative impact on GC for long running native functions, and could crash the VM if the downcall needs to pop back out in Java, e.g. via an upcall), greater efficiency can be achieved; performance sensitive users should consider this option at least for the functions that are called more frequently, assuming that these functions are *leaf* functions (e.g. do not go back to Java via an upcall) and are relatively short-lived.</small>
+* <a id="4"/>(<sup>4</sup>):<small> On Windows, layouts for variadic arguments have to be adjusted using the `CLinker.Win64.asVarArg(ValueLayout)`; this is necessary because the Windows ABI passes variadic arguments using different rules than the ones used for ordinary arguments.</small>
 
